# mexican-law-mcp-server

./: README.md  pyproject.toml  requirements.txt
src/: server.py
src/tools/: dof_search.py  legal_documents.py  legal_reasoning.py
