[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexican-legal-mcp"
version = "1.0.0"
description = "MCP server for Mexican legislation search, legal document generation, and legal reasoning"
authors = [{name = "Author"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0"
]

[project.scripts]
mexican-legal-mcp = "mexican_legal_mcp.server:main"